# genosis

./: .gitignore  .gitmodules  AGGREGATE.smk  BUILD_INDEX.smk  CMakeLists.txt  COMPARE.smk  EMBED.smk  ENCODE.smk  INDEX.smk  README.md  SEARCH.smk  SEARCH_INDEX.smk  SETUP.smk  SLICE.smk  Snakefile  clean.sh  conda_recipe.def  config.yaml  config_cluster.yaml  embed_config.yaml  environment.yml  faiss_env.yaml  one.sh  pmed.sbatch  run.sh
bash/: all_l2_faiss.sh  compare.sh  compute_hap_distance.sh  count_snps.sh  ilash_to_vcf.sh  one.out  one.sh  one_faiss.sh  phasedibd_to_vcf.sh  plot_dist_distributions.sh  plot_precision_segments.sh  plot_segment_summary_stats.sh  run_count_bp.sh  run_distances.sh  run_encode.sh  run_faiss_new_model.sh  run_genetic_distances.py  run_hnsw_faiss.sh  run_l2_faiss.sh  run_phasedibd.sh  run_plink.sh  run_slice.sh  simple_faiss.sh  write_segment_summary_stats.sh  write_segment_times.sh
conda_environments/: base.yml  ilash.yml  plink.yml  plot.yml  snakemake.yml  svs.yaml  svs.yml  torch-cpu.yaml  torch-gpu.yaml  torch-gpu.yml
config_examples/: config_GBR.yaml
config_files/: config_GBR.yaml  config_GBR_large.yaml
contrib/: htslib.cmake  zlib.cmake
cpp/: README.md
decode/: AGGREGATE.smk  EMBED.smk  ENCODE.smk  INDEX.smk  SEARCH.smk  SLICE.smk  addCM2map.py  clean.sh  decode_config.yml  decode_data.sh  decode_run.sh  decode_slurm.sh  get_realations.py  plot_small_pedigree.py  small_pedigree.py  test.sh
encoded_data/: basic_encoding.txt  encoding.txt  encoding_comma.txt
example/: aggregate.txt  clean.sh  config.yaml  config_ex.yaml  config_ex_snakemake.yaml  config_singularity.yml  config_snakemake.yaml  config_snakemake.yml  database_IDs.txt  example.vcf.gz.tbi  example.yml  example_config.yml  example_encoding.txt  example_merge.run.sh  example_merge.sh  example_merge.vcf.gz.tbi  example_merge.yml  example_run.sh  example_slurm.sh  interpolated.map  old.yml  plink.genome  plink.nosex  plink_map.map  query_IDs.txt  samples_IDs.txt  samples_query.txt  schneiders.ped  segment_boundary.map
helper_scripts/: aggregate.sh  compare.sh  conda_envs.sh  copy_data.sh  dimensionality_reduction.sh  download_1kg.sh  encode.sh  generate_example_data.sh  iLASH-example.config  iLASH-prep.sh  iLASH-run.sh  iLASH.sh  make_hap_IDs.sh  merge_map.sh  merge_vcf.sh  parallelize.py  ped-sim.sh  ped-sim_example.def  phased-ibd.sh  plink_similarity.sh  plot.sh  reorder_map.sh  singularity.sh  snakemake.sh  subset_vcf_by_sample.sh  svs.sh
include/: bitops.h  bruteForce.h  buildIndex.h  chunkEncoding.h  compare.h  encodingMap.h  exactmatch.h  (+12 more)
kristen/array_src/: CMakeLists.txt  Makefile  k_makefile
kristen/array_src/include/: utils.h
kristen/array_src/src/: .readVCF.cpp.swp  faiss_pm.cpp  faiss_pm.h  main.cpp  readEncoding.cpp  readEncoding.h  readVCF.cpp  test
kristen/array_src/tests/: main.cpp
(+530 files in other folders)
